Preserve nullable terminal Formula result fields